--- a/flavour-fusion-frontend/src/App.css
+++ b/flavour-fusion-frontend/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+
+.app-container {
+  background-image: url('../public/MainBackground.png');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  width: 100%;
+}
+.card-img-top {
+  height: 200px !important;
+  width: 100% !important;
+  object-fit: cover !important;
+  display: block;
+}
